<resources>
    <string name="app_name">TranslateOCR</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_dictionaries">Dictionaries</string>
    <string name="textview">English</string>
    <string-array name="orig_languages_array">
        <item>Afrikaans</item>
        <item>Catalan</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>French</item>
        <item>Galician</item>
        <item>Haitian</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Spanish</item>
        <item>Swedish</item>
    </string-array>
    <string-array name="dest_languages_array">
        <item>Afrikaans</item>
        <item>Catalan</item>
        <item>Danish</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>French</item>
        <item>Galician</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>
    <string name="textview2">Catalan</string>
    <string name="title_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="languages_header">Languages</string>
    <string name="features_header">Features</string>
    <string name="help_header">Help</string>
    <!-- Sync Preferences -->
    <string name="unknown_title">Mark unknown words</string>
    <!-- <string name="ocr_title">OCR</string>
    <string name="tts_title">Text to Speech</string>
    <string name="stt_title">Speech to Text</string> -->
    <string name="translate">Translate</string>
    <string name="download">Available</string>
    <string name="copying">Copying</string>
    <string name="extracting">Extracting</string>
    <string name="cache">Delete</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="original_text">Original text</string>
    <string name="translated_text">Translated text</string>
    <string name="exchange">Exchange languages</string>
    <string name="title_remove">Remove entry</string>
    <string name="countries_flags">Countries flags</string>
    <string name="voice_synthesis">Voice synthesis</string>
    <string name="voice_recognition">Voice recognition</string>
</resources>