<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uoc.jjerezt.translateocr.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dictionaries"
        android:name="edu.uoc.jjerezt.translateocr.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionaries"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="edu.uoc.jjerezt.translateocr.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.uoc.jjerezt.translateocr.ui.settings.SettingsFragment"
        android:label="@string/title_settings" >
            <action android:id="@+id/action_go"
                    app:destination="@id/navigation_dictionaries"
            />
    </fragment>
</navigation>
