<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/languages_header">

        <ListPreference
            app:key="dictionaries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:title="Dictionaries" />
        <CheckBoxPreference
            app:key="words"
            app:title="@string/unknown_title" />
        <CheckBoxPreference
            app:key="ambiguity"
            app:title="Display ambiguous words"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help_header">


        <ListPreference
            app:key = "license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:title="License" />
        <ListPreference
            app:key = "about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:title="About" />
    </PreferenceCategory>

</PreferenceScreen>